; ModuleID = '/home/carl/AnghaBench/kphp-kdb/mutual-friends/extr_mf-data.c_heap_get.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/mutual-friends/extr_mf-data.c_heap_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@heap_size = common dso_local global i64 0, align 8
@heap = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @heap_get() #0 {
  %1 = alloca i32*, align 8
  %2 = load i64, i64* @heap_size, align 8
  %3 = icmp sgt i64 %2, 0
  %4 = zext i1 %3 to i32
  %5 = call i32 @assert(i32 %4)
  %6 = load i32**, i32*** @heap, align 8
  %7 = getelementptr inbounds i32*, i32** %6, i64 1
  %8 = load i32*, i32** %7, align 8
  store i32* %8, i32** %1, align 8
  %9 = load i32**, i32*** @heap, align 8
  %10 = load i64, i64* @heap_size, align 8
  %11 = add nsw i64 %10, -1
  store i64 %11, i64* @heap_size, align 8
  %12 = getelementptr inbounds i32*, i32** %9, i64 %10
  %13 = load i32*, i32** %12, align 8
  %14 = load i32**, i32*** @heap, align 8
  %15 = getelementptr inbounds i32*, i32** %14, i64 1
  store i32* %13, i32** %15, align 8
  %16 = call i32 (...) @heap_fix_down()
  %17 = load i32*, i32** %1, align 8
  ret i32* %17
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @heap_fix_down(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
